# MagicMindNet

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commit_msg.txt  pyproject.toml
.cursor/agents/: magicmindnet-builder.md  magicmindnet-checkpoint-strict.md  magicmindnet-ci.md  magicmindnet-classify.md  magicmindnet-docs.md  magicmindnet-examples.md  magicmindnet-gate.md  magicmindnet-io.md  magicmindnet-python.md  magicmindnet-reviewer.md  magicmindnet-train.md
.github/workflows/: ci.yml
crates/mmn-core/: Cargo.toml
crates/mmn-cuda/: Cargo.toml
crates/mmn-cuda/src/: lib.rs
crates/mmn-data/: Cargo.toml
crates/mmn-data/src/: bpe.rs  chatxml.rs  dataset.rs  encoder.rs  error.rs  lib.rs  unigram.rs  vision.rs
crates/mmn-io/: Cargo.toml
crates/mmn-io/src/: block_tensors.rs  chatbot_io.rs  checkpoint_util.rs  classifier_io.rs  diffusion_io.rs  hf_adapt.rs  hf_classifier_safetensors.rs  hf_safetensors.rs  hf_tensor_codec.rs  lib.rs  tensor_merge.rs
crates/mmn-io/src/io_tests/: chatbot_io_tests.rs  classifier_io_tests.rs  diffusion_io_tests.rs  helpers.rs  mod.rs
crates/mmn-models/: Cargo.toml
crates/mmn-models/src/: autoset.rs  chatbot.rs  lib.rs
crates/mmn-nn/: Cargo.toml
crates/mmn-ops/: Cargo.toml
crates/mmn-optim/: Cargo.toml
crates/mmn-py/: Cargo.toml
crates/mmn-py/src/: encoder_util.rs  errors.rs  lib.rs  resource.rs  tokenizer.rs  train_config.rs  vision.rs
crates/mmn-py/src/datasets/: classification.rs  corpus.rs  image.rs  mod.rs  qa.rs
crates/mmn-py/src/io/: mod.rs
crates/mmn-py/src/models/: chatbot.rs  classifier.rs  diffusion.rs  mod.rs
crates/mmn-py/src/train/: mod.rs
crates/mmn-resource/: Cargo.toml
crates/mmn-resource/src/: lib.rs
crates/mmn-train/: Cargo.toml
crates/mmn-train/src/: generate.rs  lib.rs
docs/: API.md  attention_coverage.md  benchmarks.md  checkpoint_coverage.md  checkpoints.md  classifier_coverage.md  dataset_coverage.md  dev-loop.md  diffusion_coverage.md  examples_coverage.md  image_coverage.md  layernorm_coverage.md  limitations.md  mmn_py_coverage.md  mmn_py_split_plan.md  nn_coverage.md  optimizers_coverage.md  position_encoding_coverage.md  quantize_coverage.md  testing.md  training.md  training_coverage.md  vision_coverage.md
docs/reviews/: 2026-05-31-continue-deepreview.md  2026-05-31-m10-deepreview.md  2026-05-31-pass10-deepreview.md  2026-05-31-pass100-deepreview.md  2026-05-31-pass101-deepreview.md  2026-05-31-pass102-deepreview.md  2026-05-31-pass103-deepreview.md  2026-05-31-pass104-deepreview.md  2026-05-31-pass105-deepreview.md  2026-05-31-pass106-deepreview.md  2026-05-31-pass107-deepreview.md  2026-05-31-pass108-deepreview.md  2026-05-31-pass11-deepreview.md  2026-05-31-pass12-deepreview.md  2026-05-31-pass13-deepreview.md  2026-05-31-pass14-deepreview.md  2026-05-31-pass15-deepreview.md  2026-05-31-pass16-deepreview.md  2026-05-31-pass17-deepreview.md  2026-05-31-pass18-deepreview.md  2026-05-31-pass19-deepreview.md  2026-05-31-pass2-deepreview.md  2026-05-31-pass20-deepreview.md  2026-05-31-pass21-deepreview.md  2026-05-31-pass22-deepreview.md  2026-05-31-pass23-deepreview.md  2026-05-31-pass24-deepreview.md  2026-05-31-pass25-deepreview.md  2026-05-31-pass26-deepreview.md  2026-05-31-pass27-deepreview.md  2026-05-31-pass28-deepreview.md  2026-05-31-pass29-deepreview.md  (+76 more)
examples/: README.md  benchmark_train.py  bot_with_bpe.bpe.mmn  bot_with_bpe.mmn  bpe_roundtrip.py  checkpoint_roundtrip.py  classification.py  classification_benchmark.py  classifier_hf_safetensors_roundtrip.py  classifier_roundtrip.py  corpus_benchmark.py  diffusion_benchmark.py  diffusion_edit_roundtrip.py  diffusion_edit_train.py  diffusion_inpaint_sample.py  diffusion_merge_demo.py  diffusion_quantize_roundtrip.py  diffusion_roundtrip.py  diffusion_sample.py  diffusion_smoke.py  diffusion_train.py  eval_mean_loss.py  generate_reply.py  gqa_rope_generate.py  hf_safetensors_roundtrip.py  learned_pos_embed_roundtrip.py  quickstart.py  rl_spin.py  rope_roundtrip.py  unigram_roundtrip.py  unigram_train_generate.py  vision_chatbot.py
scripts/: bootstrap_dev.ps1  ci_local.ps1  ci_local.sh  count_tests.ps1  count_tests.sh  lint.ps1  lint.sh  smoke_examples.ps1  smoke_examples.sh  venv_python.ps1  venv_python.sh  verify_gate.ps1  verify_gate.sh
tests/: conftest.py  test_api_surface_py.py  test_autoset.py  test_autoset_shape_getters.py  test_autoset_sub_10b.py  test_autoset_sub_1b.py  test_bin_empty_defaults.py  test_bin_io.py  test_bin_shape_getters.py  test_bpe_checkpoint_py.py  test_bpe_tokenizer_py.py  test_chatbot_autoset.py  test_chatbot_autoset_seed.py  test_chatbot_compute_loss_finite.py  test_chatbot_compute_mean_loss_finite.py  test_chatbot_layer_size.py  test_chatbot_loss.py  test_chatbot_mean_loss_mismatch.py  test_chatbot_position_pe_py.py  test_chatbot_quantize_int4.py  test_chatbot_repr.py  test_chatbot_same_seed_loss.py  test_chatbot_shape_getters.py  test_chatbot_tokenizer_getter.py  test_chatbot_vision_getter.py  test_checkpoint_meta_seed.py  test_classifier_compute_loss_finite.py  test_classifier_compute_mean_loss_finite.py  test_classifier_edge_cases_py.py  test_classifier_import_seed.py  test_classifier_init_seed_getter.py  test_classifier_input_dim.py  test_classifier_io.py  test_classifier_labels.py  test_classifier_loss.py  test_classifier_mean_loss.py  test_classifier_nested_import_roundtrip.py  test_classifier_num_labels.py  test_classifier_num_labels_constructor.py  test_classifier_predict_probs.py  (+145 more)
(+23 files in other folders)
