[package]
name = "mmn-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mmn-core.workspace = true
thiserror.workspace = true
ndarray.workspace = true

[features]
default = []
cuda = ["cudarc"]

[dependencies.cudarc]
version = "0.12"
features = ["driver", "nvrtc", "cublas"]
optional = true
