[package]
name = "mmn-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mmn-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
arrow = { version = "54", default-features = false, features = ["json"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
