[package]
name = "mmn-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mmn-core.workspace = true
mmn-models.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ndarray.workspace = true
safetensors.workspace = true
half.workspace = true
