[package]
name = "mmn-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mmn-core.workspace = true
mmn-ops.workspace = true
mmn-nn.workspace = true
mmn-data.workspace = true
mmn-optim.workspace = true
ndarray.workspace = true
rand.workspace = true
serde.workspace = true
